--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     </footer>
 
         
-<!-- <div class="modal-overlay is-open">  -->
+<div class="modal-overlay is-open"> 
     <div class="modal">
         <button type="button" class="modal-close">
             <svg class="modal-close-icon" width="8" height="8">
