--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
     <div class="modal">
         <button type="button" class="modal-close">
             <svg class="modal-close-icon" width="8" height="8">
-            <use href="/images/icons.svg#icon-cross"></use>
+            <use href="./images/icons.svg#icon-cross"></use>
         </svg></button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
 
@@ -455,7 +455,7 @@
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-name"/>
                     <svg class="modal_input_icon" width="12" height="12">
-                        <use href="/images/icons.svg#icon-namevector"></use>
+                        <use href="./images/icons.svg#icon-namevector"></use>
                     </svg>
                 </div>
             </div>
@@ -466,7 +466,7 @@
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-phone"/>
                     <svg class="modal_input_icon" width="13" height="13">
-                        <use href="/images/icons.svg#icon-phonevector"></use>
+                        <use href="./images/icons.svg#icon-phonevector"></use>
                     </svg>
                 </div>
         </div>
@@ -477,7 +477,7 @@
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-email"/>
                     <svg class="modal_input_icon" width="15" height="12">
-                        <use href="/images/icons.svg#icon-emailvector"></use>
+                        <use href="./images/icons.svg#icon-emailvector"></use>
                     </svg>
                 </div>
         </div>
@@ -496,7 +496,7 @@
         class="modal_check visually-hidden " 
         value="true"/>
         <label for="policy" class="check-text"><span class="check-element"><svg class="check-icon" width="10" height="8">
-            <use href="/images/icons.svg#icon-vector"></use>
+            <use href="./images/icons.svg#icon-vector"></use>
         </svg></span>I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
     </div>
             <button type="submit" class="buttonsubmit">SEND</button>
