--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
         <form class="modal-form">
             <div class="divform">
-                <label><span class="modal_input_text">Name</span></label>
+                <label class="modal_input_text" for="user-name">Name</label>
     
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-name"/>
