--- a/index.html
+++ b/index.html
@@ -450,11 +450,11 @@
 
         <form class="modal-form">
             <div class="divform">
-                <label class="modal_input_text" for="user-name">Name</label>
+                <label class="modal_input_text" for="user-name"><span>Name</span></label>
     
                 <div class="modal_input_cover">
-                    <input type="text" class="modal-input" name="user-name"/>
-                    <svg class="modal_input_icon" width="12" height="12">
+                    <input type="text" class="modal-input" name="user-name" id="user-name"/>
+                    <svg class="modal_input_icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-namevector"></use>
                     </svg>
                 </div>
@@ -465,7 +465,7 @@
             <label><span class="modal_input_text">Phone</span></label>
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-phone"/>
-                    <svg class="modal_input_icon" width="13" height="13">
+                    <svg class="modal_input_icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-phonevector"></use>
                     </svg>
                 </div>
@@ -476,7 +476,7 @@
             <label><span class="modal_input_text">Email</span></label>
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-email"/>
-                    <svg class="modal_input_icon" width="15" height="12">
+                    <svg class="modal_input_icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-emailvector"></use>
                     </svg>
                 </div>
