--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         
 
         <div class="divform">
-            <label span class="modal_input_text" for="user-email"><>Email</></label>
+            <label class="modal_input_text" for="user-email"><span></span>>Email</label>
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-email" id="user-email"/>
                     <svg class="modal_input_icon" width="18" height="24">
