--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         
 
         <div class="divform">
-            <label class="modal_input_text" for="user-email"><span></span>>Email</label>
+            <label class="modal_input_text" for="user-email"><span>Email</span></label>
                 <div class="modal_input_cover">
                     <input type="text" class="modal-input" name="user-email" id="user-email"/>
                     <svg class="modal_input_icon" width="18" height="24">
@@ -484,9 +484,7 @@
 
         <div class="divform">
             <label class="modal_input_text" for="user-comment"><span>Comment</span></label>
-            <div class="modal_input_cover">
                 <textarea class="modal__text-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
-            </div>
         </div>
 
         <div>
