--- a/index.html
+++ b/index.html
@@ -489,8 +489,8 @@
 
         <div>
         <input type="checkbox"
-        name="policy"
-        id="policy"
+        name="user-privacy"
+        id="user-privacy"
         class="modal_check visually-hidden " 
         value="true"/>
         <label for="policy" class="check-text"><span class="check-element"><svg class="check-icon" width="10" height="8">
