--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         id="user-privacy"
         class="modal_check visually-hidden " 
         value="true"/>
-        <label for="policy" class="check-text"><span class="check-element"><svg class="check-icon" width="10" height="8">
+        <label for="user-privacy" class="check-text"><span class="check-element"><svg class="check-icon" width="10" height="8">
             <use href="./images/icons.svg#icon-vector"></use>
         </svg></span>I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
     </div>
