--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <textarea class="modal__text-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
         </div>
 
-        <div>
+        <div class="divcheckbox">
         <input type="checkbox"
         name="user-privacy"
         id="user-privacy"
@@ -495,7 +495,7 @@
         value="true"/>
         <label for="user-privacy" class="check-text"><span class="check-element"><svg class="check-icon" width="10" height="8">
             <use href="./images/icons.svg#icon-vector"></use>
-        </svg></span>I accept the terms and conditions of the <a href="">Privacy Policy</a></label>
+        </svg></span>I accept the terms and conditions of the <a class="privacypolicy" href="">Privacy Policy</a></label>
     </div>
             <button type="submit" class="buttonsubmit">SEND</button>
         
