--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 </div>
         </div>
 
-        <div class="divform">
+        <div class="divformfour">
             <label class="modal_input_text" for="user-comment"><span>Comment</span></label>
                 <textarea class="modal__text-field" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
         </div>
