--- a/index.html
+++ b/index.html
@@ -401,6 +401,8 @@
                     </li>
                 </ul>
 
+                <div class="container-footer__subscribe-wrapper">
+                    <p class="footer__subscribe-text">Subscribe</p>
                 <form class="footter-form">
                     <label for="footer-email" aria-label="footer-email">
 
@@ -409,19 +411,22 @@
                     name="footer-email"
                     placeholder="E-mail"
                     class="footer-input"
+                    id="footer-email"
                     />
                 </label>
                     <button 
                     type="submit" 
-                    class="btn footer-btn">Subscribe
+                    class="btn footer-btn">
+                    <span class="footer-btn-text">Subscribe</span>
                     </button>
                 </form>
+            </div>
             </div>
         </div>
     </footer>
 
         
-<!-- <div class="modal-overlay is-open">  -->
+<div class="modal-overlay is-open"> 
     <div class="modal">
         <button type="button" class="modal-close">
             <svg class="modal-close-icon" width="8" height="8">
