--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         </section>
     </main>
     <footer class="footer_footer">
-        <div class="container_footter">
+        <div class="container_footter container">
             <div class="footer__logo-wrapper">
                 <a class="logo_footerweb" href="./index.html">Web<span class="logo_footer">Studio</span></a>
                 <p class="p_footer">
