--- a/index.html
+++ b/index.html
@@ -418,9 +418,7 @@
                     <button 
                     type="submit" 
                     class="btn footer-btn">
-                    <span class="footer-btn-text">Subscribe</span>
-                    <svg class="footer__subscribe-icon" aria-label="icon-send" width="24" height="24">
-                        <use href="./images/icons.svg#icon-icon-send"></use>
+                    <span class="footer-btn-text">Subscribe</span><svg class="footer__subscribe-icon" aria-label="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                 </button>
                 </form>
