--- a/index.html
+++ b/index.html
@@ -417,8 +417,7 @@
                 </label>
                     <button 
                     type="submit" 
-                    class="btn footer-btn">
-                    <span class="footer-btn-text">Subscribe</span><svg class="footer__subscribe-icon" aria-label="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use>
+                    class="btn footer-btn">Subscribe<svg class="footer__subscribe-icon" aria-label="icon-send" width="24" height="24"><use href="./images/icons.svg#icon-icon-send"></use>
                         </svg>
                 </button>
                 </form>
