--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ Subscribe<svg class="footer__subscribe-icon" aria-label="icon-send" width="24" h
     </footer>
 
         
-<!-- <div class="modal-overlay is-open">  -->
+<div class="modal-overlay is-open"> 
     <div class="modal">
         <button type="button" class="modal-close">
             <svg class="modal-close-icon" width="8" height="8">
