--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ Subscribe<svg class="footer__subscribe-icon" aria-label="icon-send" width="24" h
         <div class="divform">
             <label class="modal_input_text" for="user-phone"><span>Phone</span></label>
                 <div class="modal_input_cover">
-                    <input type="text" class="modal-input" name="user-phone" id="user-phone"/>
+                    <input type="tel" class="modal-input" name="user-phone" id="user-phone"/>
                     <svg class="modal_input_icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-phonevector"></use>
                     </svg>
@@ -463,7 +463,7 @@ Subscribe<svg class="footer__subscribe-icon" aria-label="icon-send" width="24" h
         <div class="divform">
             <label class="modal_input_text" for="user-email"><span>Email</span></label>
                 <div class="modal_input_cover">
-                    <input type="text" class="modal-input" name="user-email" id="user-email"/>
+                    <input type="email" class="modal-input" name="user-email" id="user-email"/>
                     <svg class="modal_input_icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-emailvector"></use>
                     </svg>
